correcciones index html

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
     </main>
     <aside class="logoWhatsapp">
-        <a href="https://www.whatsapp.com/" target="_blank"><img src="./imagenes/whatsappLogo.png"
+        <a href="https://www.whatsapp.com/" target="_blank"><img class="logoWhatsapp1" src="./imagenes/whatsappLogo.png"
                 alt="logo Whatsapp"></a>
     </aside>
     <footer>
