Bootstrap aplicado a todas las paginas

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
                     <img src="./imagenes/ícono_paso1-150x150.png" class="iconosComoTrabajamos"
                         alt="icono pasos de trabajo uno">
                     <P class="textoPasosComoTrabajamos">PASO 1</P>
-                    <p class="">Lo más importante es tu idea. Envianos tu archivo 3D o podemos asesorarte y modelarlo
+                    <p>Lo más importante es tu idea. Envianos tu archivo 3D o podemos asesorarte y modelarlo
                         nosotros. Contactarnos es el primer paso para empezar tu proyecto.</p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-4 contenedorPasosComoTrabajamos ">
                     <img src="./imagenes/ícono_paso2-150x150.png" class="iconosComoTrabajamos"
                         alt="icono pasos de trabajo dos">
                     <p class="textoPasosComoTrabajamos">PASO 2</p>
-                    <p class="">Con el modelo 3D listo, ponemos en funcionamiento nuestras impresoras. Gracias a nuestra
+                    <p>Con el modelo 3D listo, ponemos en funcionamiento nuestras impresoras. Gracias a nuestra
                         granja de impresión 3D podemos obtener gran cantidad de
                         piezas en poco tiempo.</p>
                 </div>
@@ -87,7 +87,7 @@
                     <img src="./imagenes/ícono_paso3-150x150.png" class="iconosComoTrabajamos"
                         alt="icono pasos de trabajo tres">
                     <p class="textoPasosComoTrabajamos">PASO 3</p>
-                    <p class="">Entregamos en cualquier lugar del país, en el tiempo y forma acordados. También podés
+                    <p>Entregamos en cualquier lugar del país, en el tiempo y forma acordados. También podés
                         venir a retirarlo personalmente en nuestro taller.</p>
                 </div>
             </div>
@@ -147,13 +147,15 @@
 
         <section class="container contenedorCards">
             <div class="row">
-                <div class="col-12 col-md-6 col-lg-6 justify-content-center align-items-center contenedorCardThengiverse">
+                <div
+                    class="col-12 col-md-6 col-lg-6 justify-content-center align-items-center contenedorCardThengiverse">
                     <div class="card shadow" style="width: 18rem;">
                         <img src="./imagenes/imagenThengiverse.png" class="card-img-top" alt="imagen de thengiverse">
                         <div class="card-body">
                             <h5 class="card-title">Thengiverse</h5>
                             <p class="card-text">Podras encontrar miles de diseños gratuitos de todo tipo.</p>
-                            <a href="https://www.thingiverse.com" target="_blank" class="btn btn-primary">ir a la web</a>
+                            <a href="https://www.thingiverse.com" target="_blank" class="btn btn-primary">ir a la
+                                web</a>
                         </div>
                     </div>
                 </div>
