--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -1,69 +1,93 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
     <title>Contacto</title>
 </head>
+
 <body>
     <header>
-        <div class="contenedorLogo">
-            <img src="../imagenes/logoImpresión3D.png" alt="logo impresión 3D" class="logo">
-        </div>
-        <nav class="navBar">
-             <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./trabajos.html">Trabajos</a></li>
-                <li><a href="./servicios.html">Servicios</a></li>
-                <li><a href="./productos.html">Productos</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark shadow bgcolor ">
+            <div class="container-md">
+                <a class="navbar-brand" href="./index.html">IMPRESIÓN<span class="span3D">3D</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" href="../paginas/trabajos.html">Trabajos</a>
+                        <a class="nav-link" href="../paginas/servicios.html">Servicios</a>
+                        <a class="nav-link" href="../paginas/productos.html">Productos</a>
+                        <a class="nav-link active" href="#">Contacto</a>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
-        <section class="articuloInicioContacto">
-            <h1>Contactate con nosotros</h1>
+        <section class="container-fluid articuloInicioProductos">
+            <div class="row">
+                <div class="col-12">
+                    <h1>CONTACTO</h1>
+                </div>
+            </div>
         </section>
-        <section class="contenedorFormularioContactoYDondeNosEncontramos">
-            <section>
-                <form class="formularioDeContacto">
-                    <h2>Formulario de contacto</h2>
+
+        <section class="container">
+            <form class="row contacto justify-content-center align-items-center">
+                <div class="col-11 col-md-10 col-lg-10 formularioContacto justify-content-center align-items-center">
                     <div>
-                        <label for="nombreContacto">Nombre:</label>
-                        <input type="text" id="nombreContacto" placeholder="Escribi tu Nombre"> 
+                        <h2>Formulario de contacto</h2>
                     </div>
-                    <div>
-                        <label for="apellidoContacto">Apellido:</label>
-                        <input type="text" id="apellidoContacto" placeholder="Escribi tu Apellido"> 
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Nombre</label>
                     </div>
-                    <div>
-                        <label for="emailContacto">Email:</label>
-                        <input type="email" id="emailContacto" placeholder="Escribi tu email">
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Apellido</label>
                     </div>
-                    <div id="checkBox">
-                        <input  type="checkbox">
-                        <label for="checkbox">¿Desea recibir el Newsletter?</label>
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Email</label>
                     </div>
-                    <div>
-                        <textarea id="areaDeTexto" placeholder="Dejanos tu mensaje y te estaremos contactando a la brevedad." ></textarea>
+                    <div class="form-check mb-3">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label checkboxNewsletter " for="flexCheckDefault">
+                            ¿Desea recibir el Newsletter?
+                        </label>
                     </div>
-                    <div>
-                        <input type="reset" value="borra todo">
-                        <input type="button" value="enviar">
+                    <div class="form-floating mb-3">
+                        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                            style="height: 100px"></textarea>
+                        <label for="floatingTextarea2">Comments</label>
                     </div>
-                </form>
-            </section>
-            <section class="contenedorDondeNosEncontramos">
-                <h3>¿Donde nos encontramos?</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16318017.830565572!2d19.88062634606647!3d-3.123499316797269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1979facf9a7546bd%3A0x4c63e5eac93f141!2sRep%C3%BAblica%20Democr%C3%A1tica%20del%20Congo!5e0!3m2!1ses!2sar!4v1640612667052!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </section>
+                    <div class="col-10">
+                        <button class="btn btn-primary" type="submit">Enviar</button>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 col-lg-4 dondeNosEncontramos">
+                    <h3>¿Donde nos encontramos?</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16318017.830565572!2d19.88062634606647!3d-3.123499316797269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1979facf9a7546bd%3A0x4c63e5eac93f141!2sRep%C3%BAblica%20Democr%C3%A1tica%20del%20Congo!5e0!3m2!1ses!2sar!4v1640612667052!5m2!1ses!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </form>
         </section>
     </main>
     <aside class="logoWhatsapp">
-        <a href="https://www.whatsapp.com/" target="_blank"><img src="../imagenes/whatsappLogo.png" alt="logo Whatsapp"></a>
+        <a href="https://www.whatsapp.com/" target="_blank"><img src="../imagenes/whatsappLogo.png"
+                alt="logo Whatsapp"></a>
     </aside>
     <footer>
         <p>Seguinos en nuestras redes</p>
@@ -73,5 +97,12 @@
             <li><a href="https://www.linkedin.com" target="_blank"><i class="bi bi-linkedin"></i></a></li>
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
