--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
     <title>Productos</title>
@@ -12,70 +14,86 @@
 
 <body>
     <header>
-        <div class="contenedorLogo">
-            <img src="../imagenes/logoImpresión3D.png" alt="logo impresión 3D" class="logo">
-        </div>
-        <nav class="navBar">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./trabajos.html">Trabajos</a></li>
-                <li><a href="./servicios.html">Servicios</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark shadow bgcolor ">
+            <div class="container-md">
+                <a class="navbar-brand" href="./index.html">IMPRESIÓN<span class="span3D">3D</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" href="../paginas/trabajos.html">Trabajos</a>
+                        <a class="nav-link" href="../paginas/servicios.html">Servicios</a>
+                        <a class="nav-link active" href="#">Productos</a>
+                        <a class="nav-link" href="../paginas/contacto.html">Contacto</a>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
-        <section class="articuloInicioProductos">
-            <h1>PRODUCTOS</h1>
+        <section class="container-fluid articuloInicioProductos">
+            <div class="row">
+                <div class="col-12">
+                    <h1>PRODUCTOS</h1>
+                </div>
+            </div>
         </section>
-        <section class="productos">
-            <div class="contenedorProducto">
-                <img src="../imagenes/trabajosMuestra1.jpg" alt="imagen dispenser latas de cervesa impreso en 3d">
-                <p>Dispenser latas de cervesa</p>
-                <p>Precio: 2500$</p>
-                <form>
-                    <a href="https://www.mercadolibre.com" target="_blank">
-                        <input type="button" value="Comprar">
-                    </a>
-                </form>
-            </div>
-            <div class="contenedorProducto">
-                <img src="../imagenes/trabajosMuestra2.jpg" alt="imagen maseta machupichu impresa en 3d">
-                <p>Maseta Machupichu</p>
-                <p>Precio: 4580$</p>
-                <form>
-                    <a href="https://www.mercadolibre.com" target="_blank">
-                        <input type="button" value="Comprar">
-                    </a>
-                </form>
-            </div>
-            <div class="contenedorProducto">
-                <img src="../imagenes/trabajosMuestra4.jpg" alt="imagen repisa octagonal impresa en 3d">
-                <p>Repisa octagoal</p>
-                <p>Precio: 1800$</p>
-                <form>
-                    <a href="https://www.mercadolibre.com" target="_blank">
-                        <input type="button" value="Comprar">
-                    </a>
-                </form>
-            </div>
-            <div class="contenedorProducto">
-                <img src="../imagenes/trabajosMuestra5.jpg" alt="imagen porta ariculares impreso en 3D">
-                <p>Porta auricular</p>
-                <p>Precio: 2450$</p>
-                <form>
-                    <a href="https://www.mercadolibre.com" target="_blank">
-                        <input type="button" value="Comprar">
-                    </a>
-                </form>
-            </div>
+
+        <section class="container-fluid">
+            <div class="row contenedorCardsProductos">
+                <div class="col-12 col-md-6 col-lg-3 justify-content-center align-items-center CardsProductos ">
+                    <div class="card shadow" style="width: 18rem;">
+                        <img src="../imagenes/trabajosMuestra1.jpg"
+                            alt="imagen dispenser latas de cervesa impreso en 3d">
+                        <div class="card-body">
+                            <h5 class="card-title">Dispenser latas de cervesa</h5>
+                            <p class="card-text">Precio: 2500$</p>
+                            <a href="https://www.mercadolibre.com" target="_blank" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 justify-content-center align-items-center CardsProductos ">
+                    <div class="card shadow" style="width: 18rem;">
+                        <img src="../imagenes/trabajosMuestra2.jpg" alt="imagen maseta machupichu impresa en 3d">
+                        <div class="card-body">
+                            <h5 class="card-title">Maseta Machupichu</h5>
+                            <p class="card-text">Precio: 4800$</p>
+                            <a href="https://www.mercadolibre.com" target="_blank" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 justify-content-center align-items-center CardsProductos ">
+                    <div class="card shadow" style="width: 18rem;">
+                        <img src="../imagenes/trabajosMuestra4.jpg" alt="imagen repisa octagonal impresa en 3d">
+                        <div class="card-body">
+                            <h5 class="card-title">Repisa octagoal</h5>
+                            <p class="card-text">Precio: 1800$</p>
+                            <a href="https://www.mercadolibre.com" target="_blank" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 justify-content-center align-items-center CardsProductos ">
+                    <div class="card shadow" style="width: 18rem;">
+                        <img src="../imagenes/trabajosMuestra5.jpg" alt="imagen porta ariculares impreso en 3D">
+                        <div class="card-body">
+                            <h5 class="card-title">Porta auricular</h5>
+                            <p class="card-text">Precio: 2450$</p>
+                            <a href="https://www.mercadolibre.com" target="_blank" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
         </section>
     </main>
+
     <aside class="logoWhatsapp">
         <a href="https://www.whatsapp.com/" target="_blank"><img src="../imagenes/whatsappLogo.png"
                 alt="logo Whatsapp"></a>
     </aside>
+
     <footer>
         <p>Seguinos en nuestras redes</p>
         <ul class="redes">
@@ -84,6 +102,12 @@
             <li><a href="https://www.linkedin.com" target="_blank"><i class="bi bi-linkedin"></i></a></li>
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
