--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -1,53 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
     <title>Servicios</title>
 </head>
+
 <body>
     <header>
-        <div class="contenedorLogo">
-            <img src="../imagenes/logoImpresión3D.png" alt="logo impresión 3D" class="logo">
-        </div>
-        <nav class="navBar">
-             <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./trabajos.html">Trabajos</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="./productos.html">Productos</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark shadow bgcolor ">
+            <div class="container-md">
+                <a class="navbar-brand" href="./index.html">IMPRESIÓN<span class="span3D">3D</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" href="../paginas/trabajos.html">Trabajos</a>
+                        <a class="nav-link active " href="#">Servicios</a>
+                        <a class="nav-link" href="../paginas/productos.html">Productos</a>
+                        <a class="nav-link" href="../paginas/contacto.html">Contacto</a>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
-        <section class="articuloInicioServicios">
-            <h1>SERVICIOS</h1>
-        </section>
-        <section class="servicioImpresión3d">
-            <div>
-            <h2>Servicios de impresión 3D</h2>
-            <p>Vos nos pasas tu archivo stl y nosotros lo configuramos para optimizar la impresión, luego le damos vida en nuestro mundo tridimencional :D</p>
-            </div>
-            <div>
-                <img src="../imagenes/impresión3d.gif" alt="Imagen impresora imprimiendo una mano">
+        <section class="container-fluid articuloInicioServicios ">
+            <div class="row">
+                <div class="col-12">
+                    <h1>SERVICIOS</h1>
+                </div>
             </div>
         </section>
-        <section class="servicioDiseño3d">
-            <div>
-            <h3>Servicios de diseño 3D</h3>
-            <p>Pasanos la idea de tu proyecto y nosotros le damos forma.</p>
-            </div>
-            <div>
-                <img src="../imagenes/servisioDiseño3d.jpg" alt="Imagen diseñando un archivo para imprimir en 3d">
+
+        <section class=" container-fluid">
+            <div class="row servicioImpresión3d">
+                <div class="col-12 col-md-6 col-lg-6 textoServicioImpresión3d ">
+                    <h2>Servicios de impresión 3D</h2>
+                    <p>Vos nos pasas tu archivo stl y nosotros lo configuramos para optimizar la impresión, luego le
+                        damos vida en nuestro mundo tridimencional :D</p>
+                </div>
+                <div class="col-12 col-md-6 col-lg-6 contenedorImagenServicioImpresión3d">
+                    <img class="imagenServicioImpresión3d" src="../imagenes/impresión3d.gif"
+                        alt="Imagen gif impresora imprimiendo una mano">
+                </div>
             </div>
         </section>
+
+        <section class="container-fluid">
+            <div class="row servicioDiseño3d">
+                <div class="col-12 col-md-6 col-lg-6 textoServicioDiseño3d">
+                    <h2>Servicios de diseño 3D</h2>
+                    <p>Pasanos la idea de tu proyecto y nosotros le damos forma.</p>
+                </div>
+                <div class="col-12 col-md-6 col-lg-6 ">
+                    <img class="imagenServicioDiseño3d" src="../imagenes/servisioDiseño3d.jpg"
+                        alt="Imagen diseñando un archivo para imprimir en 3d">
+                </div>
+
+            </div>
+        </section>
+
     </main>
     <aside class="logoWhatsapp">
-        <a href="https://www.whatsapp.com/" target="_blank"><img src="../imagenes/whatsappLogo.png" alt="logo Whatsapp"></a>
+        <a href="https://www.whatsapp.com/" target="_blank"><img src="../imagenes/whatsappLogo.png"
+                alt="logo Whatsapp"></a>
     </aside>
     <footer>
         <p>Seguinos en nuestras redes</p>
@@ -56,6 +83,13 @@
             <li><a href="https://www.instagram.com" target="_blank"><i class="bi bi-instagram"></i></a></li>
             <li><a href="https://www.linkedin.com" target="_blank"><i class="bi bi-linkedin"></i></a></li>
         </ul>
-    </footer>  
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
