--- a/paginas/trabajos.html
+++ b/paginas/trabajos.html
@@ -1,43 +1,86 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
     <title>Trabajos</title>
 </head>
+
 <body>
     <header>
-        <div class="contenedorLogo">
-            <img src="../imagenes/logoImpresión3D.png" alt="logo impresión 3D" class="logo">
-        </div>
-        <nav class="navBar">
-             <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Trabajos</a></li>
-                <li><a href="./servicios.html">Servicios</a></li>
-                <li><a href="./productos.html">Productos</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark shadow bgcolor ">
+            <div class="container-md">
+                <a class="navbar-brand" href="./index.html">IMPRESIÓN<span class="span3D">3D</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link active" href="#">Trabajos</a>
+                        <a class="nav-link" href="../paginas/servicios.html">Servicios</a>
+                        <a class="nav-link" href="../paginas/productos.html">Productos</a>
+                        <a class="nav-link" href="../paginas/contacto.html">Contacto</a>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
-        <section class="articuloInicioTrabajos">
+        <section class=" container articuloInicioTrabajos">
             <h1>GALERIA DE TRABAJOS</h1>
             <p>Aca podes ver nuestros trabajos realizados</p>
         </section>
-        <section class="galeria">
-            <img src="../imagenes/trabajosMuestra1.jpg" alt="imagen dispenser de cervesas impreso en 3D" class="galeriaFotos">
-            <img src="../imagenes/trabajosMuestra2.jpg" alt="imagen maseta machupichu impreso en 3D" class="galeriaFotos">
-            <img src="../imagenes/trabajosMuestra3.jpg" alt="imagen maseta futurista impreso en 3D" class="galeriaFotos">
-            <img src="../imagenes/trabajosMuestra4.jpg" alt="imagen repisa octagonal impreso en 3D" class="galeriaFotos">
-            <img src="../imagenes/trabajosMuestra5.jpg" alt="imagen porta ariculares impreso en 3D" class="galeriaFotos">
-        </section>  
+
+        <section class="container contenedorGaleriaDeImagenes">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../imagenes/trabajosMuestra1.jpg" class="d-block w-100"
+                            alt="imagen dispenser de cervesas impreso en 3D">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../imagenes/trabajosMuestra2.jpg" class="d-block w-100"
+                            alt="imagen maseta machupichu impreso en 3D">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../imagenes/trabajosMuestra3.jpg" class="d-block w-100"
+                            alt="imagen maseta futurista impreso en 3D">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../imagenes/trabajosMuestra4.jpg" class="d-block w-100"
+                            alt="imagen repisa octagonal impreso en 3D">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../imagenes/trabajosMuestra5.jpg" class="d-block w-100"
+                            alt="imagen porta ariculares impreso en 3D">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
     </main>
     <aside class="logoWhatsapp">
-        <a href="https://www.whatsapp.com/" target="_blank"><img src="../imagenes/whatsappLogo.png" alt="logo Whatsapp"></a>
+        <a href="https://www.whatsapp.com/" target="_blank"><img src="../imagenes/whatsappLogo.png"
+                alt="logo Whatsapp"></a>
     </aside>
     <footer>
         <p>Seguinos en nuestras redes</p>
@@ -47,5 +90,12 @@
             <li><a href="https://www.linkedin.com" target="_blank"><i class="bi bi-linkedin"></i></a></li>
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
