correccion de margenes en vista movil

--- a/paginas/trabajos.html
+++ b/paginas/trabajos.html
@@ -40,7 +40,7 @@
             <p>Aca podes ver nuestros trabajos realizados</p>
         </section>
 
-        <section class="container contenedorGaleriaDeImagenes">
+        <section class="container-fluid contenedorGaleriaDeImagenes">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
