--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -16,7 +17,7 @@
     <header>
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark shadow bgcolor ">
             <div class="container-md">
-                <a class="navbar-brand" href="./index.html">IMPRESIÓN<span class="span3D">3D</span></a>
+                <a class="navbar-brand" href="#">IMPRESIÓN<span class="span3D">3D</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -49,12 +50,12 @@
 
         <section class="contenedorArticuloSecundario container">
             <div class="row justify-content-center align-items-center ">
-                <div class="articuloSecundario col-12 col-md-6 col-lg-6">
+                <div class="articuloSecundario col-12 col-md-6 col-lg-6" data-aos="fade-right" data-aos-duration="3000">
                     <h2> Tiempo de comercialización más rápido</h2>
                     <p>Con la ayuda de la creación rápida de prototipos y la producción sin herramientas, su proceso de
                         desarrollo e innovación se acelerará significativamente.</p>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6 ">
+                <div class="col-12 col-md-6 col-lg-6 " data-aos="fade-left" data-aos-duration="3000">
                     <img class="imgArticuloSecundario" src="./imagenes/tiempoDeComersalizacion.jpg" alt="">
                 </div>
             </div>
@@ -68,14 +69,16 @@
 
         <section class="container">
             <div class="row">
-                <div class="col-12 col-md-4 col-lg-4 contenedorPasosComoTrabajamos">
+                <div class="col-12 col-md-4 col-lg-4 contenedorPasosComoTrabajamos" data-aos="zoom-in"
+                    data-aos-duration="1000">
                     <img src="./imagenes/ícono_paso1-150x150.png" class="iconosComoTrabajamos"
                         alt="icono pasos de trabajo uno">
                     <P class="textoPasosComoTrabajamos">PASO 1</P>
                     <p>Lo más importante es tu idea. Envianos tu archivo 3D o podemos asesorarte y modelarlo
                         nosotros. Contactarnos es el primer paso para empezar tu proyecto.</p>
                 </div>
-                <div class="col-12 col-md-4 col-lg-4 contenedorPasosComoTrabajamos ">
+                <div class="col-12 col-md-4 col-lg-4 contenedorPasosComoTrabajamos" data-aos="zoom-in"
+                    data-aos-duration="2000">
                     <img src="./imagenes/ícono_paso2-150x150.png" class="iconosComoTrabajamos"
                         alt="icono pasos de trabajo dos">
                     <p class="textoPasosComoTrabajamos">PASO 2</p>
@@ -83,7 +86,8 @@
                         granja de impresión 3D podemos obtener gran cantidad de
                         piezas en poco tiempo.</p>
                 </div>
-                <div class="col-12 col-md-4 col-lg-4 contenedorPasosComoTrabajamos ">
+                <div class="col-12 col-md-4 col-lg-4 contenedorPasosComoTrabajamos" data-aos="zoom-in"
+                    data-aos-duration="3000">
                     <img src="./imagenes/ícono_paso3-150x150.png" class="iconosComoTrabajamos"
                         alt="icono pasos de trabajo tres">
                     <p class="textoPasosComoTrabajamos">PASO 3</p>
@@ -107,7 +111,8 @@
 
         <section class="container contenedorListaQueEsLaImpresion3d">
             <div class="row justify-content-center align-items-center">
-                <div class="col-12 col-md-6 col-lg-6 listaQueEsLaImpresion3d ">
+                <div class="col-12 col-md-6 col-lg-6 listaQueEsLaImpresion3d" data-aos="fade-right"
+                    data-aos-duration="3000">
                     <h4>¿Cómo funciona?</h4>
                     <ul>
                         <li>
@@ -129,7 +134,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6 ContenedorImagenImpresora3d">
+                <div class="col-12 col-md-6 col-lg-6 ContenedorImagenImpresora3d" data-aos="fade-left"
+                    data-aos-duration="3000">
                     <img class="imagenImpresora3d" src="./imagenes/serv_y_prod_1.png" alt="imagen de impresora 3d">
                 </div>
             </div>
@@ -149,7 +155,7 @@
             <div class="row">
                 <div
                     class="col-12 col-md-6 col-lg-6 justify-content-center align-items-center contenedorCardThengiverse">
-                    <div class="card shadow" style="width: 18rem;">
+                    <div class="card shadow cardThengiverse" style="width: 18rem;">
                         <img src="./imagenes/imagenThengiverse.png" class="card-img-top" alt="imagen de thengiverse">
                         <div class="card-body">
                             <h5 class="card-title">Thengiverse</h5>
@@ -160,8 +166,8 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 justify-content-center align-items-center contenedorCardCults">
-                    <div class="card shadow" style="width: 18rem;">
-                        <img src="./imagenes/imagenCults.jpg" class="card-img-top" alt="imagen de thengiverse">
+                    <div class="card shadow cardCults" style="width: 18rem;">
+                        <img src="./imagenes/imagenCults.png" class="card-img-top" alt="imagen de thengiverse">
                         <div class="card-body">
                             <h5 class="card-title">Cults</h5>
                             <p class="card-text">Podras encontrar miles de diseños gratuitos y pago de todo tipo.</p>
@@ -192,6 +198,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
