--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark shadow bgcolor ">
             <div class="container-md">
-                <a class="navbar-brand" href="./index.html">IMPRESIÓN<span class="span3D">3D</span></a>
+                <a class="navbar-brand" href="../index.html">IMPRESIÓN<span class="span3D">3D</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
