correccion de margenes en index

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
                     <p>Con la ayuda de la creación rápida de prototipos y la producción sin herramientas, su proceso de
                         desarrollo e innovación se acelerará significativamente.</p>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6 " data-aos="fade-left" data-aos-duration="3000">
-                    <img class="imgArticuloSecundario" src="./imagenes/tiempoDeComersalizacion.jpg" alt="">
+                <div class="col-12 col-md-6 col-lg-6 ">
+                    <img class="imgArticuloSecundario" src="./imagenes/tiempoDeComersalizacion.jpg" data-aos="zoom-in"
+                        data-aos-duration="3000" alt="imagen tiempo de comercialización">
                 </div>
             </div>
         </section>
@@ -134,9 +135,9 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-12 col-md-6 col-lg-6 ContenedorImagenImpresora3d" data-aos="fade-left"
-                    data-aos-duration="3000">
-                    <img class="imagenImpresora3d" src="./imagenes/serv_y_prod_1.png" alt="imagen de impresora 3d">
+                <div class="col-12 col-md-6 col-lg-6 contenedorImagenImpresora3d">
+                    <img class="imagenImpresora3d" src="./imagenes/serv_y_prod_1.png" data-aos="zoom-in"
+                        data-aos-duration="3000" alt="imagen de impresora 3d">
                 </div>
             </div>
         </section>
@@ -167,7 +168,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 justify-content-center align-items-center contenedorCardCults">
                     <div class="card shadow cardCults" style="width: 18rem;">
-                        <img src="./imagenes/imagenCults.png" class="card-img-top" alt="imagen de thengiverse">
+                        <img src="./imagenes/imagenCults.png" class="card-img-top" alt="imagen de Cults">
                         <div class="card-body">
                             <h5 class="card-title">Cults</h5>
                             <p class="card-text">Podras encontrar miles de diseños gratuitos y pago de todo tipo.</p>
