--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -54,7 +54,7 @@
         </section>
 
         <section class=" container shadow">
-            <div class="row servicioImpresión3d" data-aos="fade-right" data-aos-duration="3000">
+            <div class="row servicioImpresión3d" data-aos="zoom-in" data-aos-duration="3000">
                 <div class="col-8 col-md-6 col-lg-6 textoServicioImpresión3d "  >
                     <h2>Servicios de impresión 3D</h2>
                     <p>Vos nos pasas tu archivo stl y nosotros lo configuramos para optimizar la impresión, luego le
@@ -68,7 +68,7 @@
         </section>
 
         <section class="container shadow">
-            <div class="row servicioDiseño3d" data-aos="fade-left" data-aos-duration="3000">
+            <div class="row servicioDiseño3d" data-aos="zoom-in" data-aos-duration="3000">
                 <div class="col-10 col-md-6 col-lg-6 textoServicioDiseño3d">
                     <h2>Servicios de diseño 3D</h2>
                     <p>Si no tenés el modelo 3D del objeto que querés imprimir, <span> nosotros te lo diseñamos.</span>
